# VoxType

./: .eslint-report.json  .gitignore  .tsc-eslint-errors.txt  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  release-please-config.json  renovate.json  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
.impeccable/: design.json
docs/adr/: 0001-add-opt-in-cloud-dictation.md
native/windows-helper/: Cargo.toml  README.md
native/windows-helper/src/: main.rs  windows_impl.rs  windows_impl_audio_capture.rs  windows_impl_audio_processing.rs  windows_impl_core.rs  windows_impl_input_helpers.rs  windows_impl_ocr.rs
planning/: README.md  architecture.md  changelog.md  cloud-dictation-implementation-status.md  cloud-dictation-prd.md  cloud-dictation.md  decisions.md  dictionary-and-context.md  features.md  ideas-backlog.md  models.md  open-questions.md  parakeet-phase1-plan.md  parakeet-phase2-notes.md  product-vision.md  release-and-changelog-strategy.md  roadmap.md  windows-insertion.md
scripts/: generate-detailed-release-notes.mjs  generate-parakeet-bpe-vocab.py  generate-release-notes.mjs  sync-release-version.mjs  verify-packaging-config.mjs
src/main/: dictionary-store.ts  file-retention.ts  hardware-service.ts  history-store.ts  index.ts  (+21 more)
(+67 files in other folders)
