[package]
name = "voxtype-windows-helper"
version = "0.3.2"
edition = "2021"

[dependencies]
cpal = "0.16"
hound = "3.5"
image = { version = "0.25", default-features = false, features = ["png"] }
rubato = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Foundation",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Memory",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
